# terrama2-collector-api

./: README.md  pyproject.toml
collector_api/: app.py
collector_api/blueprint/restapi/: __init__.py  collector_resources.py
collector_api/configuration/: configuration.py
collector_api/controller/: abstract_controller.py
collector_api/ext/: database.py
collector_api/repository/: abstract_dao.py
collector_api/utils/: utils.py
